<resources>
    <string name="app_name">AndroidLearning</string>
    <string name="button">button</string>
    <string name="text">Text</string>
    <string name="checkbox">CheckBox</string>
    <string name="inputs">Inputs</string>
    <string name="radio">Radio</string>
    <string name="Button">Button</string>
    <string name="alert">Alert</string>
    <string name="date_picker">date picker</string>
    <string name="Spinner">Spinner</string>
    <string name="Switch">Switch</string>
    <string name="timepicker">time picker</string>
</resources>